RESOLVED FIXED25700
Regression:WebKit:cmd-left and cmd-right use to go to the beginning and end of a line in Mail
https://bugs.webkit.org/show_bug.cgi?id=25700
Summary Regression:WebKit:cmd-left and cmd-right use to go to the beginning and end o...
chris fleizach
Reported 2009-05-11 12:18:26 PDT
• launch VoiceOver, and interact with a mail message, • press (cmd-left arrow), • the cursor should move to the begining of the line, and cmd-right, should move the cursor to the end of the line
Attachments
patch (3.12 KB, patch)
2009-05-11 12:20 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-05-11 12:20:51 PDT
chris fleizach
Comment 2 2009-05-11 12:21:36 PDT
not sure how to add a regression test for this. original implementation with that handled option and shift did not have a regression test
chris fleizach
Comment 3 2009-05-11 18:10:42 PDT
Note You need to log in before you can comment on or make changes to this bug.