Bug 25700: Regression:WebKit:cmd-left and cmd-right use to go to the beginning and end of a line in Mail https://bugs.webkit.org/show_bug.cgi?id=25700

Canonical link: https://commits.webkit.org/35519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43532 268f45cc-cd09-0410-ab3c-d52691b4dbfc